# ilink-bot

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: command_bot.py  echo_bot.py  low_level_client.py  media_bot.py
src/ilink_bot/: __init__.py
src/ilink_bot/bot/: __init__.py  bot.py  filters.py
src/ilink_bot/cli/: __init__.py  main.py
src/ilink_bot/client/: __init__.py  cdn.py  client.py  rate_limiter.py
src/ilink_bot/mcp/: __init__.py  server.py
src/ilink_bot/models/: __init__.py  messages.py
src/ilink_bot/webhook/: __init__.py  gateway.py
tests/unit/: test_bot.py  test_cdn.py  test_client.py  test_filters.py  test_mcp.py  test_models.py  test_rate_limiter.py  test_webhook.py
