[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ilink-bot"
version = "0.1.0"
description = "Standalone Python SDK for WeChat iLink Bot protocol — no OpenClaw dependency required"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "WEIFENG2333" },
]
keywords = ["wechat", "bot", "ilink", "sdk", "clawbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
]
webhook = [
    "aiohttp>=3.9.0",
]
cli = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]
all = [
    "ilink-bot[mcp,webhook,cli]",
]
dev = [
    "ilink-bot[all]",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
ilink-bot = "ilink_bot.cli.main:app"

[project.urls]
Homepage = "https://github.com/WEIFENG2333/ilink-bot"
Repository = "https://github.com/WEIFENG2333/ilink-bot"
Issues = "https://github.com/WEIFENG2333/ilink-bot/issues"
Documentation = "https://github.com/WEIFENG2333/ilink-bot#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/ilink_bot"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]
ignore = ["E501", "B008"]  # E501: line length handled by formatter; B008: typer.Option() in defaults is standard

[tool.ruff.lint.isort]
known-first-party = ["ilink_bot"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/ilink_bot"]
omit = ["*/cli/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
